--- a/frontend/src/Components/Login/LoginForm.css
+++ b/frontend/src/Components/Login/LoginForm.css
@@ -3,6 +3,7 @@
 }
 
 .login {
+    padding: 12px;
     width: 300px;
     height: min-content;
     background-color: white;
@@ -11,6 +12,7 @@
 
 .loginTitle {
     text-align: center;
+    font-size: 30px;
 }
 
 .loginButton {
