--- a/frontend/src/Pages/Feed/Feed.css
+++ b/frontend/src/Pages/Feed/Feed.css
@@ -1,3 +1,11 @@
 .feed {
     background-color: white;
+    min-height: 500pt;
+    padding: 0% 5% 10% 5%;
+}
+
+.bodypage {
+    margin-left: 10%;
+    margin-right: 10%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
