--- a/frontend/src/Pages/Profile/Profile.css
+++ b/frontend/src/Pages/Profile/Profile.css
@@ -1,3 +1,11 @@
 .profile {
+    min-height: 500pt;
     background-color: white;
+    padding: 2% 5% 10% 5%;
+}
+
+.bodypage {
+    margin-left: 10%;
+    margin-right: 10%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
