--- a/frontend/src/Pages/Profile/Profile.css
+++ b/frontend/src/Pages/Profile/Profile.css
@@ -9,3 +9,45 @@
     margin-right: 10%;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
+
+.profilePhoto {
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    overflow: hidden;
+    border: 2px solid rgb(255, 227, 167); /* Add a 2px solid black border */
+}
+
+.photop {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profileHead {
+    display: flex;
+    padding: 3% 4%;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.button-container {
+    display: flex; /* Use flexbox layout */
+    justify-content: space-between; /* Distribute space between buttons */
+}
+  
+  /* Optional: Style for individual buttons */
+  .button-container button {
+    padding: 3px 0px; /* Add padding to buttons */
+    margin: 0 8px;
+    background-color: #373737; /* Button background color */
+    color: white; /* Text color */
+    border: none; /* Remove button border */
+    border-radius: 4px; /* Rounded corners */
+    cursor: pointer; /* Show pointer cursor on hover */
+    transition: background-color 0.2s ease;
+  }
+  
+  .button-container button:hover {
+    background-color: #2980b9;
+  }
