--- a/frontend/src/Components/Moments/NewMomentForm/NewMomentForm.css
+++ b/frontend/src/Components/Moments/NewMomentForm/NewMomentForm.css
@@ -1,3 +1,74 @@
 .myform {
     text-align: center;
 }
+
+
+  .containerAddMoment {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  .form-group {
+    margin-bottom: 15px;
+  }
+  label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  input[type="text"],
+  textarea {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    resize: vertical;
+  }
+  input[type="file"] {
+    padding: 6px;
+  }
+  button {
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  button:hover {
+    background-color: #45a049;
+  }
+
+  .containerTag {
+    width: 80%;
+    margin: 20px auto;
+  }
+  
+  .buttonTag-container {
+    border: 1px solid #ccc;
+    max-height: 200px; /* Максимальная высота контейнера */
+    overflow-y: auto; /* Включение вертикальной прокрутки */
+  }
+  
+  .scrollable-div {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+  
+  .buttonTag {
+    padding: 8px 16px;
+    margin-bottom: 8px;
+    background-color: #f0f0f0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  buttonTag:hover {
+    background-color: #e0e0e0;
+  }
