--- a/frontend/src/Pages/Profile/Profile.css
+++ b/frontend/src/Pages/Profile/Profile.css
@@ -11,14 +11,18 @@
 }
 
 .profilePhoto {
-    width: 150px;
-    height: 150px;
+    min-width: 130px;
+    min-height: 130px;
+    max-width: 150px;
+    max-height: 150px;
     border-radius: 100%;
+
     overflow: hidden;
     border: 2px solid rgb(255, 227, 167); /* Add a 2px solid black border */
 }
 
 .photop {
+
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -27,6 +31,7 @@
 .profileHead {
     display: flex;
     padding: 3% 4%;
+    border: 2mm ridge rgba(211, 220, 50, .6);
     /* justify-content: center; */
     align-items: center;
 }
@@ -34,6 +39,15 @@
 .button-container {
     display: flex; /* Use flexbox layout */
     justify-content: space-between; /* Distribute space between buttons */
+}
+
+.username {
+    text-align: left;
+    margin-left: 30px;
+}
+
+.profileData {
+    padding-right: 10px;
 }
   
   /* Optional: Style for individual buttons */
